libs version updates